Added farm controller & model
