# routers/router.go
@@ -15,6 +15,7 @@ import (
 
 func init() {
 	ns := beego.NewNamespace("/v1",
+
 		beego.NSNamespace("/object",
 			beego.NSInclude(
 				&controllers.ObjectController{},
@@ -27,6 +28,12 @@ func init() {
 			),
 		),
 		
+		beego.NSNamespace("/farm",
+			beego.NSInclude(
+				&controllers.FarmController{},
+			),
+		),
+
 		beego.NSNamespace("/user",
 			beego.NSInclude(
 				&controllers.UserController{},
