# swagger/swagger.yml
@@ -11,6 +11,152 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
+  /farm/:
+    get:
+      tags:
+      - farm
+      description: get Farm
+      operationId: FarmController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Farm'
+        "403":
+          description: ""
+    post:
+      tags:
+      - farm
+      description: create Farm
+      operationId: FarmController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for Farm content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Farm'
+      responses:
+        "201":
+          description: '{int} models.Farm'
+        "403":
+          description: body is empty
+  /farm/{id}:
+    get:
+      tags:
+      - farm
+      description: get Farm by id
+      operationId: FarmController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Farm'
+        "403":
+          description: :id is empty
+    put:
+      tags:
+      - farm
+      description: update the Farm
+      operationId: FarmController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for Farm content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Farm'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Farm'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - farm
+      description: delete the Farm
+      operationId: FarmController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
+  /farm/nearby:
+    post:
+      tags:
+      - farm
+      description: Finds nearby farm location from current user location
+      operationId: FarmController.Nearby
+      parameters:
+      - in: path
+        name: latitude
+        description: latitude
+        required: true
+        type: number
+        format: double
+      - in: path
+        name: longitude
+        description: longitude
+        required: true
+        type: number
+        format: double
+      - in: path
+        name: radius
+        description: Search radius (in meter)
+        required: true
+        type: number
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Farm'
+        "403":
+          description: no nearby farms
   /object/:
     get:
       tags:
@@ -313,6 +459,26 @@ definitions:
   bson.ObjectId:
     title: ObjectId
     type: object
+  models.Farm:
+    title: Farm
+    type: object
+    properties:
+      id:
+        $ref: '#/definitions/bson.ObjectId'
+      location:
+        $ref: '#/definitions/models.GeoPoint'
+      name:
+        type: string
+  models.GeoPoint:
+    title: GeoPoint
+    type: object
+    properties:
+      latitude:
+        type: number
+        format: double
+      longitude:
+        type: number
+        format: double
   models.Object:
     title: Object
     type: object
@@ -372,6 +538,9 @@ tags:
 - name: seed
   description: |
     SeedController operations for Seed
+- name: farm
+  description: |2
+     FarmController operations for Farm
 - name: user
   description: |
     Operations about Users
